[project]
name = "claude2html"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mistune>=3.0",
    "trafilatura>=1.12",
]

[project.scripts]
claude2html = "claude2html.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude2html"]

[tool.hatch.build.targets.wheel.force-include]
"claude2html/assets" = "claude2html/assets"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
